Modification du fichier config.ini

--- a/config.ini
+++ b/config.ini
@@ -11,3 +11,17 @@ Dans ce fichier config
 
 
 "
+[Pins]
+led = 16
+
+[InfluxDB]
+token = 67RXSC0-UBC6rejo9yjm7fHPKCl1N-x0BBrPwaljZGwtIw50YJ6ZE6OIYnPX9EXGsvRSWL-ZTNGvb7MnxP3OmA==
+org = localOrg
+bucket = Sensors_data
+url= http://169.254.10.10:8086
+
+[Path_to_save_img]
+absolute_path = /home/pi/Desktop/memoire/image
+
+[size_crop_first_img]
+height = 12  ; cm
