--- a/config.ini
+++ b/config.ini
@@ -27,3 +27,7 @@ absolute_path = /home/pi/Desktop/memoire/image
 height = 12  ; cm
 
 [image_arg]
+pot_limit = 117
+channel = k
+kernel_size = 3
+fill_size = 1
