correction data_acquisition

--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,13 @@
-" 
-Dans ce fichier config 
-- gpio de la balance
-- gpio de la led
-- de l'interval de temps de chaque mesure 
-- de l'adresse ip du rpi en access point
-- du port de la db
-- du token de la db
-- du nom de la db 
-- les tags des différentes mesures
+#Dans ce fichier config 
+#- gpio de la balance
+#- gpio de la led
+#- de l'interval de temps de chaque mesure 
+#- de l'adresse ip du rpi en access point
+#- du port de la db
+#- du token de la db
+#- du nom de la db 
+#- les tags des différentes mesures
 
-
-"
 [Pins]
 led = 16
 
