--- a/config.ini
+++ b/config.ini
@@ -12,19 +12,19 @@
 led = 16
 
 [InfluxDB]
-token = 67RXSC0-UBC6rejo9yjm7fHPKCl1N-x0BBrPwaljZGwtIw50YJ6ZE6OIYnPX9EXGsvRSWL-ZTNGvb7MnxP3OmA==
-org = localOrg
-bucket = Sensors_data
-url= http://169.254.10.10:8086
+token = dCffbouNfJQuuobONpL4HFef3fCLPB33ir4EMr5Zk_HbVgXYboBRtCRuDLwACwtpIa0ykjU3cBG076Mw1_V7BA==
+org = pheno
+bucket = phenostation_data
+url = http://10.42.0.1:8086
 
 [Path_to_save_img]
-absolute_path = /home/pi/Desktop/memoire/image
+absolute_path = /home/pi/Desktop/image
 
 [size_crop_first_img]
 height = 12  ; cm
 
 [image_arg]
-pot_limit = 117
+pot_limit = 44
 channel = k
 kernel_size = 3
 fill_size = 1
