Changement de la boucle measurement

--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@
 #- les tags des différentes mesures
 
 [Pins]
-led = 16
+led = 23
 
 [InfluxDB]
 token = dCffbouNfJQuuobONpL4HFef3fCLPB33ir4EMr5Zk_HbVgXYboBRtCRuDLwACwtpIa0ykjU3cBG076Mw1_V7BA==
@@ -24,7 +24,11 @@ absolute_path = /home/pi/Desktop/image
 height = 12  ; cm
 
 [image_arg]
-pot_limit = 44
+pot_limit = 0
 channel = k
 kernel_size = 3
 fill_size = 1
+
+
+[time_interval]
+time_interval = 60
