--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,4 @@
 #Dans ce fichier config 
-#- gpio de la balance
-#- gpio de la led
 #- de l'interval de temps de chaque mesure 
 #- de l'adresse ip du rpi en access point
 #- du port de la db
@@ -8,8 +6,8 @@
 #- du nom de la db 
 #- les tags des différentes mesures
 
-[Pins]
-led = 23
+[ID_station]
+ID = 1
 
 [InfluxDB]
 token = dCffbouNfJQuuobONpL4HFef3fCLPB33ir4EMr5Zk_HbVgXYboBRtCRuDLwACwtpIa0ykjU3cBG076Mw1_V7BA==
@@ -18,7 +16,7 @@ bucket = phenostation_data
 url = http://10.42.0.1:8086
 
 [Path_to_save_img]
-absolute_path = /home/pi/Desktop/image
+absolute_path = /home/pi/Desktop/phenostation/assets
 
 [image_arg]
 pot_limit = 0
@@ -28,4 +26,5 @@ fill_size = 1
 
 
 [time_interval]
-time_interval = 60
+time_interval = 600
+
