--- a/config.ini
+++ b/config.ini
@@ -28,3 +28,10 @@ fill_size = 1
 [time_interval]
 time_interval = 600
 
+[Var_Verif]
+is_shutdown = False
+
+[cal_coef]
+load_cell_cal = 1
+tare = 0
+
