--- a/config.ini
+++ b/config.ini
@@ -26,10 +26,10 @@ fill_size = 1
 
 
 [time_interval]
-time_interval = 600
+time_interval = 60
 
 [Var_Verif]
-is_shutdown = False
+is_shutdown = 0
 
 [cal_coef]
 load_cell_cal = 1
